# gitgud

./: Cargo.toml  LICENSE  README.md
.gitgud/: config.toml  prompt.txt
src/: cli.rs  config.rs  error.rs  main.rs  prompt.rs  utils.rs
src/cli/: commit.rs  init.rs
stubs/: README.md
